add authentication for logo, change subtitle color

--- a/client/src/style.sass
+++ b/client/src/style.sass
@@ -1,5 +1,5 @@
 $color: #0E3D66
-$subtitle-color: #F3722C
+$subtitle-color: #90BE6D
 $subtitle-family: 'Kufam', cursive
 $table-cell-heading-color: #0E3D66
 $table-head-cell-color: #0E3D66
