added background image and style to about

--- a/client/src/pages/style.sass
+++ b/client/src/pages/style.sass
@@ -1,5 +1,6 @@
 html, body 
     color: #0E3D66
+    background-image: url("back.png")
 
 .heading1 
     font-family: 'Kufam', cursive
@@ -13,4 +14,6 @@ html, body
 
 .button
     font-weight: bold
+
+
 
