margin at about page

--- a/client/src/pages/style.sass
+++ b/client/src/pages/style.sass
@@ -19,8 +19,13 @@ html, body
     margin-left: 2rem
 
 .img1
-    height: 90%
-    width: 90%
+    height: 100%
+    width: 100%
+
+.pic
+    margin-top: 0.4rem
+
+
 
 
 
