create Add Children page, update button

--- a/client/src/style.sass
+++ b/client/src/style.sass
@@ -3,5 +3,6 @@ $subtitle-color: #90BE6D
 $subtitle-family: 'Kufam', cursive
 $table-cell-heading-color: #0E3D66
 $table-head-cell-color: #0E3D66
+// $table-background-color: rgba(67,170,139,.2)
 
 @import "~bulma/bulma.sass"
