changed color for child name and points to make it more visible

--- a/client/src/pages/style.sass
+++ b/client/src/pages/style.sass
@@ -5,8 +5,11 @@ html, body
 .heading1 
     font-family: 'Kufam', cursive
     font-weight: bold
-    color: #F94144
+    color: #f0b13c
 
+.red
+    color: #F94144
+    
 .heading2 
     font-family: 'Kufam', cursive
     font-weight: bold
@@ -24,6 +27,7 @@ html, body
 
 .pic
     margin-top: 0.4rem
+
 
 
 
