--- a/client/src/pages/style.sass
+++ b/client/src/pages/style.sass
@@ -28,9 +28,12 @@ html, body
 .pic
     margin-top: 0.4rem
 
+.container
+    align-content: center
 
-
-
+.button 
+    color: #eb8650
+    opacity: 0.9
 
 
 
